# PBRecipe

./: .gitignore  .phpunit.result.cache  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-AGPL  LICENSE-CC-BY-NC-SA  LICENSES  MAIN_DOM.md  Makefile  README.md  RECIPE_DOM.md  SPECS.md  composer.json  environment.yml  pbrecipe.spec  phpunit.xml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  dom_main.rst  dom_recipe.rst  index.rst  php_export.rst  requirements.txt  user_guide.rst
docs/_static/: mermaid_zoom.css  mermaid_zoom.js
hooks/: pyi_rth_fonts.py
src/pbrecipe/: __init__.py  __main__.py  app.py  argparse_qt.py  constants.py  image_utils.py
src/pbrecipe/config/: __init__.py  _config_root.py  app_config.py  dialog_dirs.py  recipe_config.py
src/pbrecipe/database/: __init__.py  database.py  factory.py  schema.py
src/pbrecipe/export/: __init__.py  php_export.py  yaml_io.py
src/pbrecipe/models/: __init__.py  category.py  difficulty.py  ingredient.py  recipe.py  source.py  technique.py  unit.py
src/pbrecipe/resources/: __init__.py
src/pbrecipe/resources/icons/: pbrecipe.icns
src/pbrecipe/ui/: __init__.py  about_dialog.py  config_dialog.py  consistency_dialog.py  globals_dialog.py  html_editor.py  ingredient_list_editor.py  main_window.py  media_tab.py  preferences_dialog.py  recipe_editor.py  spellcheck_dialog.py
tests/: conftest.py  test_app.py  test_app_config.py  test_config.py  test_config_dialog.py  test_database_extra.py  test_editors.py  test_factory.py  test_html_editor.py  test_html_editor_widget.py  test_list_dialogs.py  test_main_window.py  test_misc_dialogs.py  test_models_and_edges.py  test_php_export.py  test_php_fixtures.py  test_plural_dialogs.py  test_recipe_config_extra.py  test_recipe_filter.py  test_spellcheck.py  test_spellcheck_dialog.py  test_sqlite_db.py  test_technique_difficulty_dialogs.py  test_yaml_io.py
tests/php/: DisplayTest.php  RecipeTest.php  SearchTest.php  TechniqueTest.php  bootstrap.php
tools/: bump_version.py  extract_changelog.py  git_version.sh  make_icons.py
(+24 files in other folders)
